# miden-verify

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
src/: main.rs
