[package]
name = "miden-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
miden-protocol = { version = "0.13" }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
