[package]
name = "miden-verify"
version = "0.1.0"
description = "Verify Miden accounts and notes from the CLI"
authors = ["Miden contributors"]
repository = "https://github.com/walnuthq/miden-verify"
homepage = "https://github.com/walnuthq/miden-verify"
documentation = "https://github.com/walnuthq/miden-verify"
categories = ["command-line-utilities"]
keywords = ["miden"]
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
miden-protocol = { version = "0.14" }
tokio = { version = "1.51", features = ["rt-multi-thread", "net", "macros", "fs"] }
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0"
cargo_toml = "0.22"
